fixed UI gaps

--- a/ocr_app/static/styles.css
+++ b/ocr_app/static/styles.css
@@ -490,18 +490,6 @@ button:active:not(:disabled) {
 }
 
 
-.sub-background {
-background-color: #1e1e1e;
-padding: 30px 50px; /* top-bottom 30px, left-right 50px */
-border-radius: 12px;
-margin: 0 auto;
-width: 100%;
-max-width: 1200px;
-box-shadow: 0 0 20px rgba(255, 255, 255, 0.05);
-box-sizing: border-box;
-}
-
-
 body {
     display: flex;
     flex-direction: row;
@@ -534,6 +522,8 @@ body {
     box-sizing: border-box;
     overflow-y: auto;
     height: 100vh;
+    display: flex;
+    gap: 8px;
 }
 
 body {
@@ -542,18 +532,4 @@ body {
     background-color: #000000f3;
     color: white;
     min-height: 100vh;
-}
-
-.sub-background {
-    flex: 1 1 94vw;
-    background-color: #1e1e1e;
-    padding: 30px 50px;
-    border-radius: 0;
-    box-shadow: 0 0 20px rgba(255, 255, 255, 0.05);
-    box-sizing: border-box;
-    overflow-y: auto;
-    height: 100vh;
-    width: 100%;
-    display: flex;
-    gap: 8px;
 }
